Bug 522675 - Do not send OnStopRequest with NS_OK if moving fails. r=dbienvenu